Release 1.6.2: stabilization pass and ten sample datapacks
Hardens the payout, packet, datapack-loading, project and optional-mod paths
catalogued in the 1.6.2 changelog entry, and adds the regression and
resource-integrity coverage that pins them down.

Adds datapack_samples/: ten complete, installable example datapacks with
per-pack notes, spanning the whole datapack surface - quests, chains,
templates, deadlines and failure branches, village projects, situations,
voice pools, reputation ladders, titles and optional-mod gating - plus one
pack that disables and overrides bundled content. SampleDatapacksParseTest
holds them to the same codecs and reload-time validators a live reload
applies, so a documented example cannot rot unnoticed.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>